--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,13 +29,25 @@
 
     <ImageView
         android:id="@+id/imageView3"
+        android:layout_width="73dp"
+        android:layout_height="79dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="184dp"
+        android:contentDescription="@string/imagedescription"
+        app:srcCompat="@drawable/blog_icon" />
+
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="184dp"
-        android:contentDescription="@string/imagedescription"
+        android:layout_marginStart="29dp"
+        android:layout_marginLeft="29dp"
+        android:layout_marginTop="71dp"
         app:srcCompat="@drawable/coal" />
 
 </RelativeLayout>
